fix z-index waveform anim

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -16,6 +16,11 @@ body, html {
   // color: red;
 }
 
+.row.logo{
+    z-index: 1;
+    position: relative;
+}
+
 .nav{
   width:100%;
   color: #fff;
@@ -72,18 +77,6 @@ body, html {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
-}
-
-.logo {
-  position:     absolute;
-  left:         50%;
-  top:          50%;
-  height:       25px;
-  width:        120px;
-  z-index:      2;
-  margin-left: -60px;
-  margin-top:  -32px;
-  transform-origin: 50% 0;;
 }
 
 #main{
